--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             ],
             "scripts": [
               "node_modules/prismjs/prism.js",
-              "node_modules/prismjs/components/prism-typescript.js"
+              "node_modules/prismjs/components/prism-typescript.js",
+              "node_modules/echarts/dist/echarts.min.js"
             ]
           },
           "configurations": {
